--- a/templates/pages/myprofile.html
+++ b/templates/pages/myprofile.html
@@ -24,8 +24,13 @@
         <div class="form-group">
 
             <div class="form-row">
+
+                <div class="col-12">
+                        <h3 class="heading"> < header ></header></h3>
+                </div>
                 <div class="col-6">
 
+           
 
                     <label class="profile-label" for="profile-shortDesc">
                         Short Description
@@ -52,31 +57,57 @@
         </div>
 
         <div class="form-group">
-            <div class="form-row col-12 ">
+            <div class="form-row">
+
+                <div class="col-12">
+                    <label class="profile-label" for="profile-shortDesc">
+                        District
+                    </label>
+                </div>
+
+                <div class="col-12">
+                    <select class="selectpicker profile-selectpicker" id="profileSelect" multiple
+                        data-selected-text-format="count">
+                        <option value="Mitte">Mitte</option>
+                        <option value="Friedrichshain-Kreuzberg">Friedrichshain-Kreuzberg</option>
+                        <option value="Pankow">Pankow</option>
+                        <option value="Charlottenburg-Wilmersdorf">Charlottenburg-Wilmersdorf</option>
+                        <option value="Spandau">Spandau</option>
+                        <option value="Steglitz-Zehlendorf">Steglitz-Zehlendorf</option>
+                        <option value="Tempelhof-Schöneberg">Tempelhof-Schöneberg</option>
+                        <option value="Neukölln">Neukölln</option>
+                        <option value="Treptow-Köpenick">Treptow-Köpenick</option>
+                        <option value="Marzahn-Hellersdorf">Marzahn-Hellersdorf</option>
+                        <option value="Lichtenberg">Lichtenberg</option>
+                        <option value="Reinickendorf">Reinickendorf</option>
+
+                    </select>
+
+                    <button class="refresh d-inline" id="districtRefresh-profile"><i class="fas fa-times"></i></button>
+                </div>
+
+            </div>
+
+            <div class="form-group">
+
+                <div class="form-row">
 
 
-                <select class="selectpicker" id="profileSelect" multiple data-selected-text-format="count">
-                    <option value="Mitte">Mitte</option>
-                    <option value="Friedrichshain-Kreuzberg">Friedrichshain-Kreuzberg</option>
-                    <option value="Pankow">Pankow</option>
-                    <option value="Charlottenburg-Wilmersdorf">Charlottenburg-Wilmersdorf</option>
-                    <option value="Spandau">Spandau</option>
-                    <option value="Steglitz-Zehlendorf">Steglitz-Zehlendorf</option>
-                    <option value="Tempelhof-Schöneberg">Tempelhof-Schöneberg</option>
-                    <option value="Neukölln">Neukölln</option>
-                    <option value="Treptow-Köpenick">Treptow-Köpenick</option>
-                    <option value="Marzahn-Hellersdorf">Marzahn-Hellersdorf</option>
-                    <option value="Lichtenberg">Lichtenberg</option>
-                    <option value="Reinickendorf">Reinickendorf</option>
-                </select>
+<div class="col-12">
+        <div class="col-12">
+                <h3 class="heading"> < body ></header></h3>
+        </div>
+</div>
 
+                    {% include 'components/skills_list.html' %}
 
-                <button class="refresh" id="districtRefresh-profile"><i class="fas fa-times"></i></button>
+                </div>
             </div>
         </div>
+</div>
 
 
-    </form>
+</form>
 
 
 
