Add starability library to achieve radio button-powered star ratings

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -45,6 +45,8 @@
 
     <link rel="stylesheet" type="text/css"
         href="{{url_for('static', filename='css/awesome-bootstrap-checkbox.css')}}" />
+        <link rel="stylesheet" type="text/css"
+        href="{{url_for('static', filename='css/starability-checkmark-min.css')}}" />  
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/main.css')}}" />
 </head>
 
