--- a/templates/layouts/nav.html
+++ b/templates/layouts/nav.html
@@ -71,7 +71,7 @@
                             href="{{url_for('myprofile', username=session['username'])}}"><i class="fas fa-users"></i> My Profile</a>
                         <a class="dropdown-item" href="#"><i class="fas fa-heart"></i> My Favorites</a>
                         <a class="dropdown-item" href="#"><i class="fas fa-cog"></i> Settings</a>
-                        <a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                        <a class="dropdown-item" href="{{url_for('logout')}}"><i class="fas fa-sign-out-alt"></i> Logout</a>
                     </div>
                 </li>
 
