Re-add userarea.js

--- a/templates/pages/myprofile.html
+++ b/templates/pages/myprofile.html
@@ -112,20 +112,22 @@
                         </label>
                     </div>
 
+                    <div class="skill-field">
+                        <fieldset class="starability-checkmark">
+                            <legend>Python</legend>
 
-                    <fieldset class="starability-checkmark">
-                        <legend>Python</legend>
-                        <input type="radio" id="no-rate" class="input-no-rate" name="rating" value="0" checked
-                            aria-label="No skills" />
+                            <input type="radio" id="no-rate" class="input-no-rate" name="rating" value="0" checked
+                                aria-label="No skills" />
                             <label for="no-rate" class="no-rate" title="Terrible">No skill</label>
-                        <input type="radio" id="first-rate1" name="rating" value="1" />
-                        <label for="first-rate1" title="Terrible">1 star</label>
-                        <input type="radio" id="first-rate2" name="rating" value="2" />
-                        <label for="first-rate2" title="Not good">2 stars</label>
-                        <input type="radio" id="first-rate3" name="rating" value="3" />
-                        <label for="first-rate3" title="Average">3 stars</label>
-                    </fieldset>
+                            <input type="radio" id="first-rate1" name="rating" value="1" />
+                            <label for="first-rate1" title="Terrible">1 star</label>
+                            <input type="radio" id="first-rate2" name="rating" value="2" />
+                            <label for="first-rate2" title="Not good">2 stars</label>
+                            <input type="radio" id="first-rate3" name="rating" value="3" />
+                            <label for="first-rate3" title="Average">3 stars</label>
 
+                        </fieldset>
+                    </div>
                 </div>
             </div>
         </div>
