Test submit button in myprpfile page.

--- a/templates/pages/myprofile.html
+++ b/templates/pages/myprofile.html
@@ -89,52 +89,55 @@
                     <button class="refresh d-inline" id="districtRefresh-profile"><i class="fas fa-times"></i></button>
                 </div>
 
+
+
             </div>
+        </div>
+        <div class="form-group">
 
-            <div class="form-group">
-
-                <div class="form-row">
+            <div class="form-row">
 
 
 
-                    <div class="col-12">
+                <div class="col-12">
 
-                        <h3 class="heading">
-                            < body>
-                                </header>
-                        </h3>
+                    <h3 class="heading">
+                        < body>
+                            </header>
+                    </h3>
 
-                    </div>
+                </div>
 
-                    <div class="col-12">
-                        <label class="profile-label" for="profile-shortDesc">
-                            My skills
-                        </label>
-                    </div>
+                <div class="col-12">
+                    <label class="profile-label" for="profile-shortDesc">
+                        My skills
+                    </label>
+                </div>
 
-                    <div class="skill-field">
-                        <fieldset class="starability-checkmark">
-                            <legend>Python</legend>
+                <div class="skill-field">
 
-                            <input type="radio" id="no-rate" class="input-no-rate" name="rating" value="0" checked
-                                aria-label="No skills" />
-                            <label for="no-rate" class="no-rate" title="Terrible">No skill</label>
-                            <input type="radio" id="first-rate1" name="rating" value="1" />
-                            <label for="first-rate1" title="Terrible">1 star</label>
-                            <input type="radio" id="first-rate2" name="rating" value="2" />
-                            <label for="first-rate2" title="Not good">2 stars</label>
-                            <input type="radio" id="first-rate3" name="rating" value="3" />
-                            <label for="first-rate3" title="Average">3 stars</label>
 
-                        </fieldset>
-                    </div>
+                    <fieldset class="starability-checkmark">
+                        <legend>Python</legend>
+
+                        <input type="radio" id="no-rate" class="input-no-rate" name="rating" value="0" checked
+                            aria-label="No skills" />
+                        <label for="no-rate" class="no-rate" title="Terrible">No skill</label>
+                        <input type="radio" id="python-beginner" name="rating" value="1" />
+                        <label for="python-beginner" title="Beginner">1 star</label>
+                        <input type="radio" id="python-intermediate" name="rating" value="2" />
+                        <label for="python-intermediate" title="Intermediate">2 stars</label>
+                        <input type="radio" id="python-advanced" name="rating" value="3" />
+                        <label for="python-advanced" title="Advanced">Advanced</label>
+
+                    </fieldset>
                 </div>
             </div>
         </div>
-</div>
+        <button type="submit" class="btn btn-primary btn-large logreg-btn my-auto" name="btn"
+        value="publish">Publish your Profile</button>
+    </form>
 
-
-</form>
 
 
 
