Update dropdown form in myprofil.html

--- a/templates/pages/myprofile.html
+++ b/templates/pages/myprofile.html
@@ -69,8 +69,8 @@
                 </div>
 
                 <div class="col-12">
-                    <select class="selectpicker profile-selectpicker" id="profileSelect" multiple
-                        data-selected-text-format="count">
+
+                    <select class="form-control" id="profileSelect">
                         <option value="Mitte">Mitte</option>
                         <option value="Friedrichshain-Kreuzberg">Friedrichshain-Kreuzberg</option>
                         <option value="Pankow">Pankow</option>
@@ -85,8 +85,6 @@
                         <option value="Reinickendorf">Reinickendorf</option>
 
                     </select>
-
-                    <button class="refresh d-inline" id="districtRefresh-profile"><i class="fas fa-times"></i></button>
                 </div>
 
 
