Try passing the value of the radio buttons from JS

--- a/templates/pages/myprofile.html
+++ b/templates/pages/myprofile.html
@@ -70,7 +70,7 @@
 
                 <div class="col-12">
 
-                    <select class="form-control" id="profileSelect">
+                    <select class="form-control" name="district" id="profileSelect">
                         <option value="Mitte">Mitte</option>
                         <option value="Friedrichshain-Kreuzberg">Friedrichshain-Kreuzberg</option>
                         <option value="Pankow">Pankow</option>
@@ -122,11 +122,11 @@
                             aria-label="No skills" />
                         <label for="no-rate" class="no-rate" title="Terrible">No skill</label>
                         <input type="radio" id="python-beginner" name="rating" value="1" />
-                        <label for="python-beginner" title="Beginner">1 star</label>
+                        <label for="python-beginner" title="Beginner">0 Beginner</label>
                         <input type="radio" id="python-intermediate" name="rating" value="2" />
-                        <label for="python-intermediate" title="Intermediate">2 stars</label>
+                        <label for="python-intermediate" title="Intermediate">1 Intermediate</label>
                         <input type="radio" id="python-advanced" name="rating" value="3" />
-                        <label for="python-advanced" title="Advanced">Advanced</label>
+                        <label for="python-advanced" title="Advanced">3 Advanced</label>
 
                     </fieldset>
                 </div>
