Add document.ready function to userarea.js.

--- a/templates/pages/myprofile.html
+++ b/templates/pages/myprofile.html
@@ -106,35 +106,65 @@
 
                 </div>
 
+                <!-- MY SKILLS SECTION -->
+
                 <div class="col-12">
                     <label class="profile-label" for="profile-shortDesc">
                         My skills
                     </label>
                 </div>
 
-                <div class="skill-field">
+                <div class="col-12">
+                    <div class="skill-field">
 
+                        <div class="form-check abc-checkbox ">
+                            <input class="form-check-input" id="python-box" type="checkbox">
+                            <label class="form-check-label" for="python-box">
+                                Python
+                            </label>
+                        </div>
+                    </div>
 
-                    <fieldset class="starability-checkmark">
-                        <legend>Python</legend>
+                    <div class="skill-options">
+                        <div class="form-inline">
+                            <div class="form-check abc-checkbox ">
+                                <input class="form-check-input" id="python-beginner" name="python" value="beginner"
+                                    type="checkbox">
+                                <label class="form-check-label" for="python-beginner">
+                                    Beginner
+                                </label>
+                            </div>
+                        </div>
 
-                        <input type="radio" id="no-rate" class="input-no-rate" name="rating" value="0" checked
-                            aria-label="No skills" />
-                        <label for="no-rate" class="no-rate" title="Terrible">No skill</label>
-                        <input type="radio" id="python-beginner" name="rating" value="1" />
-                        <label for="python-beginner" title="Beginner">0 Beginner</label>
-                        <input type="radio" id="python-intermediate" name="rating" value="2" />
-                        <label for="python-intermediate" title="Intermediate">1 Intermediate</label>
-                        <input type="radio" id="python-advanced" name="rating" value="3" />
-                        <label for="python-advanced" title="Advanced">3 Advanced</label>
+                        <div class="form-inline">
+                            <div class="form-check abc-checkbox ">
+                                <input class="form-check-input" id="python-beginner" name="python" value="beginner"
+                                    type="checkbox">
+                                <label class="form-check-label" for="python-beginner">
+                                    Intermediate
+                                </label>
+                            </div>
+                        </div>
 
-                    </fieldset>
+                        <div class="form-inline">
+                            <div class="form-check abc-checkbox ">
+                                <input class="form-check-input" id="python-beginner" name="python" value="beginner"
+                                    type="checkbox">
+                                <label class="form-check-label" for="python-beginner">
+                                    Advanced
+                                </label>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
+
             </div>
         </div>
-        <button type="submit" class="btn btn-primary btn-large logreg-btn my-auto" name="btn"
-        value="publish">Publish your Profile</button>
-    </form>
+</div>
+<button type="submit" class="btn btn-primary btn-large logreg-btn my-auto" name="btn" value="publish">Publish
+    your Profile</button>
+</form>
 
 
 
