get jQuery to work.

--- a/templates/pages/myprofile.html
+++ b/templates/pages/myprofile.html
@@ -95,8 +95,6 @@
 
             <div class="form-row">
 
-
-
                 <div class="col-12">
 
                     <h3 class="heading">
@@ -114,8 +112,10 @@
                     </label>
                 </div>
 
+                <!-- Python skill group -->
+
                 <div class="col-12">
-                    <div class="skill-field">
+                    <div class="form-group skill-field">
 
                         <div class="form-check abc-checkbox ">
                             <input class="form-check-input" id="python-box" type="checkbox">
@@ -125,7 +125,7 @@
                         </div>
                     </div>
 
-                    <div class="skill-options">
+                    <div class="skill-options" id="python-options">
                         <div class="form-inline">
                             <div class="form-check abc-checkbox ">
                                 <input class="form-check-input" id="python-beginner" name="python" value="beginner"
@@ -156,6 +156,54 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- SQL FORM GROUP -->
+
+                    <div class="form-group skill-field">
+
+                            <div class="form-check abc-checkbox ">
+                                <input class="form-check-input" id="sql-box" type="checkbox">
+                                <label class="form-check-label" for="sql-box">
+                                    SQL
+                                </label>
+                            </div>
+                        </div>
+    
+                        <div class="skill-options" id="sql-options">
+                            <div class="form-inline">
+                                <div class="form-check abc-checkbox ">
+                                    <input class="form-check-input" id="sql-beginner" name="sql" value="beginner"
+                                        type="checkbox">
+                                    <label class="form-check-label" for="sql-beginner">
+                                        Beginner
+                                    </label>
+                                </div>
+                            </div>
+    
+                            <div class="form-inline">
+                                <div class="form-check abc-checkbox ">
+                                    <input class="form-check-input" id="sql-intermediate" name="sql" value="intermediate"
+                                        type="checkbox">
+                                    <label class="form-check-label" for="sql-intermediate">
+                                        Intermediate
+                                    </label>
+                                </div>
+                            </div>
+    
+                            <div class="form-inline">
+                                <div class="form-check abc-checkbox ">
+                                    <input class="form-check-input" id="sql-advanced" name="sql" value="advanced"
+                                        type="checkbox">
+                                    <label class="form-check-label" for="sql-advanced">
+                                        Advanced
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+
                 </div>
 
 
