Write jQuery toggle skill level box function.

--- a/templates/pages/myprofile.html
+++ b/templates/pages/myprofile.html
@@ -138,9 +138,9 @@
 
                         <div class="form-inline">
                             <div class="form-check abc-checkbox ">
-                                <input class="form-check-input" id="python-beginner" name="python" value="beginner"
+                                <input class="form-check-input" id="python-intermediate" name="python" value="intermediate"
                                     type="checkbox">
-                                <label class="form-check-label" for="python-beginner">
+                                <label class="form-check-label" for="python-intermediate">
                                     Intermediate
                                 </label>
                             </div>
@@ -148,9 +148,9 @@
 
                         <div class="form-inline">
                             <div class="form-check abc-checkbox ">
-                                <input class="form-check-input" id="python-beginner" name="python" value="beginner"
+                                <input class="form-check-input" id="python-advanced" name="advanced" value="advanced"
                                     type="checkbox">
-                                <label class="form-check-label" for="python-beginner">
+                                <label class="form-check-label" for="python-advanced">
                                     Advanced
                                 </label>
                             </div>
