get skill adding to work.

--- a/templates/pages/myprofile.html
+++ b/templates/pages/myprofile.html
@@ -118,7 +118,7 @@
                     <div class="form-group skill-field">
 
                         <div class="form-check abc-checkbox ">
-                            <input class="form-check-input" id="python-box" type="checkbox">
+                            <input class="form-check-input" id="python-box" type="checkbox" name="skill" value="python">
                             <label class="form-check-label" for="python-box">
                                 Python
                             </label>
@@ -161,8 +161,8 @@
 
                     <div class="form-group skill-field">
 
-                            <div class="form-check abc-checkbox ">
-                                <input class="form-check-input" id="sql-box" type="checkbox">
+                            <div class="form-check abc-checkbox">
+                                <input class="form-check-input" id="sql-box" type="checkbox" name="skill" value="sql">
                                 <label class="form-check-label" for="sql-box">
                                     SQL
                                 </label>
