--- a/templates/pages/myprofile.html
+++ b/templates/pages/myprofile.html
@@ -120,60 +120,27 @@
                 <!-- Skill groups -->
 
 
-                <div class="form-group skill-field">
-
-                    <div class="form-check abc-checkbox ">
-                        <input class="form-check-input" id="skill-box" type="checkbox" name="skill" value="{{skill}}">
+                <div class="col-12">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" name="skills" value="{{skill}}" id="skill-box">
                         <label class="form-check-label" for="skill-box">
                             {{skill}}
                         </label>
                     </div>
+
+
+                    {% endfor %}
+
+
+
+
+
                 </div>
-
-                <div class="skill-options" id="python-options">
-                    <div class="form-inline">
-                        <div class="form-check abc-checkbox ">
-                            <input class="form-check-input" id="skill-beginner" name="{{skill}}" value="beginner"
-                                type="checkbox">
-                            <label class="form-check-label" for="skill-beginner">
-                                Beginner
-                            </label>
-                        </div>
-                    </div>
-
-                    <div class="form-inline">
-                        <div class="form-check abc-checkbox ">
-                            <input class="form-check-input" id="skill-intermediate" name="{{skill}}"
-                                value="intermediate" type="checkbox">
-                            <label class="form-check-label" for="skill-intermediate">
-                                Intermediate
-                            </label>
-                        </div>
-                    </div>
-
-                    <div class="form-inline">
-                        <div class="form-check abc-checkbox ">
-                            <input class="form-check-input" id="python-advanced" name="{{skill}}" value="advanced"
-                                type="checkbox">
-                            <label class="form-check-label" for="python-advanced">
-                                Advanced
-                            </label>
-                        </div>
-                    </div>
-                </div>
-
-                {% endfor %}
-
-
-
-
-
             </div>
         </div>
-</div>
-<button type="submit" class="btn btn-primary btn-large logreg-btn my-auto" name="btn" value="publish">Publish
-    your Profile</button>
-</form>
+        <button type="submit" class="btn btn-primary btn-large logreg-btn my-auto" name="btn" value="publish">Publish
+            your Profile</button>
+    </form>
 
 
 
