--- a/templates/pages/myprofile.html
+++ b/templates/pages/myprofile.html
@@ -112,35 +112,69 @@
                     </label>
                 </div>
 
-                {% for skill in skills %}
-
-
-
-
                 <!-- Skill groups -->
 
 
-                <div class="col-12">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" name="skills" value="{{skill}}" id="skill-box">
-                        <label class="form-check-label" for="skill-box">
-                            {{skill}}
-                        </label>
+
+
+                <!-- Skill tabs, code for nav tabs taken from https://www.w3schools.com/bootstrap4/bootstrap_navs.asp -->
+                <nav>
+                    <ul class="nav nav-tabs">
+
+                        <li class="nav-item">
+                            <a class="nav-link active" data-toggle="tab" href="#skillsTab" id="skills-tab" role="tab"
+                                aria-controls="skills"><i class="fas fa-share-alt"></i> I'm proficient
+                                in...</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" href="#desiredSkillsTab" id="desiredSkills-tab"
+                                role="tab" aria-controls="desiredSkills"><i class="fas fa-search"></i> Looking
+                                for...</a>
+                        </li>
+
+                    </ul>
+                </nav>
+
+
+
+
+
+            </div>
+
+
+            <div class="tab-content">
+
+                <!-- Begin "I'm proficient in..." Skills Tab -->
+                <div class="tab-pane container fade show active" id="myskill-myprofile" role="tabpanel"
+                    aria-labelledby="skills-tab">
+                    <div class="skill-column">
+
+                        {% include 'components/skills_list.html' %}
+
                     </div>
 
-
-                    {% endfor %}
-
-
+                    <!-- End "I'm proficient in..." Skills Tab -->
+                </div>
 
 
+                <!-- Begin "Looking for..." desired skills tab -->
+                <div class="tab-pane container fade show" id="desiredSkillsTab" role="tabpanel"
+                    aria-labelledby="desiredSkills-tab">
 
+                    <div class="skill-column">
+
+                        {% include 'components/desired_skills_list.html' %}
+
+
+                    </div>
+                    <!-- End "Looking for..." desired skills tab -->
                 </div>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary btn-large logreg-btn my-auto" name="btn" value="publish">Publish
-            your Profile</button>
-    </form>
+</div>
+<button type="submit" class="btn btn-primary btn-large logreg-btn my-auto" name="btn" value="publish">Publish
+    your Profile</button>
+</form>
 
 
 
