Debugging_: trying to use tab featues.

--- a/static/scss/_userarea.scss
+++ b/static/scss/_userarea.scss
@@ -1,5 +1,5 @@
 .myprofile-wrapper {
-    height: 140vh;
+    height: auto;
 }
 
 .profile-group {
@@ -24,6 +24,6 @@
     display: inline;
 }
 
-.opacity {
-    opacity: 0.5;
+.profile-skill-column {
+padding: 0.3rem !important;
 }
