--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1046,7 +1046,7 @@ ul ul a {
 }
 
 .myprofile-wrapper {
-  height: 140vh;
+  height: auto;
 }
 
 .profile-group {
@@ -1072,7 +1072,7 @@ ul ul a {
   display: inline;
 }
 
-.opacity {
-  opacity: 0.5;
+.profile-skill-column {
+  padding: 0.3rem !important;
 }
 /*# sourceMappingURL=main.css.map */
